Email validation updated

--- a/client/src/app/components/registration-form/registration-form.component.html
+++ b/client/src/app/components/registration-form/registration-form.component.html
@@ -111,7 +111,7 @@
     <mat-form-field class="example-full-width" appearance="fill">
       <mat-label>Email</mat-label>
       <input
-       (ngModelChange)="emailValidate()"
+       (keyup)="emailValidate()"
         matInput
         [(ngModel)]="registrationModel.email"
         required
