--- a/client/src/app/components/login-form/login-form.component.html
+++ b/client/src/app/components/login-form/login-form.component.html
@@ -14,7 +14,7 @@
         required
         placeholder="username"
         [(ngModel)]="loginModel.username"
-        name="v1"
+        name="username"
       />
       <mat-error>Username is required!</mat-error>
     </mat-form-field>
@@ -26,7 +26,7 @@
         required
         placeholder="password"
         [(ngModel)]="loginModel.password"
-        name="v2"
+        name="password"
       />
       <mat-error>Password is required!</mat-error>
     </mat-form-field>
