--- a/client/src/app/components/login-form/login-form.component.html
+++ b/client/src/app/components/login-form/login-form.component.html
@@ -32,5 +32,6 @@
     </mat-form-field>
 
     <button [disabled]="!loginForm.valid" (click)="loginUser()" mat-button color="accent">Submit</button>
+    <a href="./../../registrationPage.html">Don't have an account? Register instead</a>
   </form>
 </div>
