--- a/client/src/app/components/main/main.component.html
+++ b/client/src/app/components/main/main.component.html
@@ -1,2 +1,2 @@
-<registration-form></registration-form>
-<!-- <login-form></login-form> -->
+<app-background></app-background>
+<login-form></login-form>
