about us on all devices

--- a/client/src/app/components/about-us/about-us.component.html
+++ b/client/src/app/components/about-us/about-us.component.html
@@ -1,27 +1,25 @@
 <div class="aboutUs">
-    <h1 style="font-size: 75px; margin:50px">About us</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sit amet ipsum ac tellus ultrices mollis. Praesent eleifend nibh nec molestie pellentesque. Sed cursus varius neque ac euismod. Curabitur eget nibh id sem imperdiet rutrum ut in quam. Nunc pulvinar placerat dolor, quis tincidunt massa auctor id. Pellentesque et ipsum fermentum, ultrices sem eget, mollis enim. Nullam et ornare diam. Aenean vitae ligula non erat fermentum condimentum a sed risus. Etiam viverra lacus ipsum, vel elementum massa fermentum ac. In nec orci velit. Fusce sed dui a tellus eleifend blandit eget non ex. Mauris ut sapien viverra, venenatis purus eu, efficitur justo. Sed lorem ipsum, consequat vel mi nec, posuere pharetra lacus. Suspendisse potenti. Morbi tincidunt metus sed ex eleifend, et eleifend mauris sodales. Etiam eget neque at lectus varius rhoncus. Nunc ipsum odio, maximus nec arcu sed, dignissim molestie felis. Aliquam malesuada felis quis ipsum hendrerit imperdiet. Pellentesque eget nulla non nisi molestie suscipit eu sed purus. Ut porta ullamcorper ante non sagittis. Ut urna magna, imperdiet quis placerat vel, imperdiet in risus. Sed tristique massa quis dolor tincidunt finibus.</p>
-    <div id="centerInDiv">
-        <div fxLayout="column" fxLayoutGap="32px">
-            <div fxLayout="row" fxLayoutGap="32px">
-                <div class="textBoxChild">
-                    <h1>Our Mission</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sit amet ipsum ac tellus ultrices mollis. Praesent eleifend nibh nec molestie pellentesque. Sed cursus varius neque ac euismod. Curabitur eget nibh id sem imperdiet rutrum ut in quam. Nunc pulvinar placerat dolor, quis tincidunt massa auctor id. Pellentesque et ipsum fermentum, ultrices sem eget, mollis enim. Nullam et ornare diam. Aenean vitae ligula non erat fermentum condimentum a sed risus. Etiam viverra lacus ipsum, vel elementum massa fermentum ac.</p>
-                </div>
-                <div class="textBoxChild">
-                    <h1>Our Essence</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sit amet ipsum ac tellus ultrices mollis. Praesent eleifend nibh nec molestie pellentesque. Sed cursus varius neque ac euismod. Curabitur eget nibh id sem imperdiet rutrum ut in quam. Nunc pulvinar placerat dolor, quis tincidunt massa auctor id. Pellentesque et ipsum fermentum, ultrices sem eget, mollis enim. Nullam et ornare diam. Aenean vitae ligula non erat fermentum condimentum a sed risus. Etiam viverra lacus ipsum, vel elementum massa fermentum ac.</p>
-                </div>
+    <h1 style="font-size: 75px; margin:4.6%">About us</h1>
+    <p style="font-size: 20px; padding-left:10%; padding-right:10%">ViitorStudent reprezintă un ajutor pentru toți cei aflați în căutarea facultății potrivite. Centralizarea datelor referitoare la procedurile de admitere ale celor mai prestigioase facultăți din țară, un mecansim automat de selectare a facultății pe baza pasiunilor și înclinațiilor utilizatorului, dar și posibilitatea de a discuta cu studenți ai respectivei facultăți, toate aflate la un click distanță. </p>
+    <div id="inner-div">
+        <div fxLayout.gt-xs="row" fxLayout.lt-sm="column" fxLayoutGap="5%">
+            <div class="textBoxChild" style="padding-left: 10%;">
+                <h1 style="font-size: 40px;">De ce?</h1>
+                <p style="font-size: 20px;">Din numeroasele discuții cu elevi de liceu, atât din an terminal cât și din ani mai mici, am constatat că accesul la informații cu privire la admiterea la facultate este dificil pentru aceștia. Astfel, am pornit ViitorStudent cu dorința de a facilita obținerea tuturor datelor necesare pentru a face alegerea corectă.</p>
             </div>
-            <div fxLayout="row" fxLayoutGap="32px">
-                <div class="textBoxChild">
-                    <h1>Our Promise</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sit amet ipsum ac tellus ultrices mollis. Praesent eleifend nibh nec molestie pellentesque. Sed cursus varius neque ac euismod. Curabitur eget nibh id sem imperdiet rutrum ut in quam. Nunc pulvinar placerat dolor, quis tincidunt massa auctor id. Pellentesque et ipsum fermentum, ultrices sem eget, mollis enim. Nullam et ornare diam. Aenean vitae ligula non erat fermentum condimentum a sed risus. Etiam viverra lacus ipsum, vel elementum massa fermentum ac.</p>
-                </div>
-                <div class="textBoxChild">
-                    <h1>Our Vibe</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sit amet ipsum ac tellus ultrices mollis. Praesent eleifend nibh nec molestie pellentesque. Sed cursus varius neque ac euismod. Curabitur eget nibh id sem imperdiet rutrum ut in quam. Nunc pulvinar placerat dolor, quis tincidunt massa auctor id. Pellentesque et ipsum fermentum, ultrices sem eget, mollis enim. Nullam et ornare diam. Aenean vitae ligula non erat fermentum condimentum a sed risus. Etiam viverra lacus ipsum, vel elementum massa fermentum ac.</p>
-                </div>
+            <div class="textBoxChild" style="padding-right: 10%;">
+                <h1 style="font-size: 40px;">Pai cum?</h1>
+                <p style="font-size: 20px">Am realizat o bază de date cu privire la procedurile de admitere a numeroase facultăți din țară, pe care dorim să o menținem actuală. De asemenea, am conceput un mecanism automat de recomandare a studiilor superioare pe baza diverselor categorii, precum materii preferate, oraș sau cariera ideală.</p>
+            </div>
+        </div>
+        <div fxLayout.gt-xs="row" fxLayout.lt-sm="column" fxLayoutGap="5%">
+            <div class="textBoxChild" style="padding-left: 10%;">
+                <h1 style="font-size: 40px;">Pentru cine?</h1>
+                <p style="font-size: 20px">ViitorStudent se adresează tuturor elevilor care doresc să urmeze o formă de învățământ superior. Oricine are dificultăți în a se decide cu privire la facultatea pe care dorește să o urmeze va găsi răspunsul la problema sa accesând site-ul nostru.</p>
+            </div>
+            <div class="textBoxChild" style="padding-right: 10%;">
+                <h1 style="font-size: 40px;">Cine suntem?</h1>
+                <p style="font-size: 20px;">Suntem un grup de tineri care doresc să rezolve două dintre cele mai presante probleme ale elevilor din ziua de azi: accesul dificil la informații legate de admiterea la facultate și lipsa de orientare cu privire la studiile superioare.</p>
             </div>
         </div>
     </div>
