--- a/client/src/app/components/about-us/about-us.component.css
+++ b/client/src/app/components/about-us/about-us.component.css
@@ -6,18 +6,53 @@
     position: relative;
     text-align: center;
     color: white;
-    margin-left: 500px;
-    margin-right: 500px;
+    margin-left: 20%;
+    margin-right: 20%;
 }
 #centerInDiv{
-    width: 1200px;
+    width: 62%;
     height: auto;
     margin: 0 auto;
-    margin-left: 35px;
+    margin-left: 1.8%;
     position: relative;
 }
 .textBoxChild{
     background-color: none;
-    padding: 0px;
-    width:400px
+    padding-top: 3%;
+    width:60%;
+}
+
+  
+#inner-div {
+    display: inline-block;
+    margin: 0 auto;
+    padding: 3px;
+}
+
+@media only screen and (max-width: 600px){
+    .aboutUs{
+        width: 80%;
+        background-image: url("/assets/gray_logo.png");
+        background-size: contain;
+        background-repeat: no-repeat;
+        background-position: 50% 50%;
+        position: relative;
+        text-align: center;
+        color: white;
+        margin-top:15%;
+        margin-left: 10%;
+        margin-right:10%;
+    }
+    #centerInDiv{
+        width: 0px;
+        height: auto;
+        margin: 0 auto;
+        margin-left: 5.8%;
+        position: relative;
+    }
+    .textBoxChild{
+        background-color: none;
+        padding: 8.3%;
+        width:80%
+    }
 }
