--- a/client/src/app/components/login-form/login-form.component.html
+++ b/client/src/app/components/login-form/login-form.component.html
@@ -8,7 +8,7 @@
   #loginForm = "ngForm"
   >
   <div style="width: 100%;" >
-  <button mat-mini-fab mat-dialog-close style=" margin: 10px; float: right;"><mat-icon>close</mat-icon></button>
+  <button mat-icon-button mat-dialog-close style=" margin: 10px; float: right;"><mat-icon>close</mat-icon></button>
 </div>
     <h2>Login into your account</h2>
     <mat-form-field class="example-full-width" appearance="fill">
@@ -28,10 +28,20 @@
       <input
         matInput
         required
+        [type]="hide ? 'password' : 'text'"
         placeholder="password"
         [(ngModel)]="loginModel.password"
         name="password"
       />
+      <button
+      mat-icon-button
+      matSuffix
+      (click)="hide = !hide"
+      [attr.aria-label]="'Hide password'"
+      [attr.aria-pressed]="hide"
+    >
+      <mat-icon>{{ hide ? "visibility_off" : "visibility" }} </mat-icon>
+    </button>
       <mat-error>Password is required!</mat-error>
     </mat-form-field>
 
