fixed landing image crop

--- a/client/src/app/components/landing/landing.component.html
+++ b/client/src/app/components/landing/landing.component.html
@@ -1,2 +1,2 @@
-<img src="assets/background.jpg" alt="background image">
+<img src="assets/background.jpg" alt="background image" style="object-fit: cover;">
 <h1>Viitor student</h1>
