Survey detection Client in Progress

--- a/client/src/app/components/about-us/about-us.component.html
+++ b/client/src/app/components/about-us/about-us.component.html
@@ -1,5 +1,8 @@
-
-  <div  class="aboutUs" fxLayout="column" fxLayoutAlign="center center" >
+  <div  class="aboutUs"  >
+    <div style="width: 100%;" >
+      <button mat-icon-button mat-dialog-close style=" margin: 10px; float: right;"><mat-icon>close</mat-icon></button>
+    </div>
+    <div fxLayout="column" fxLayoutAlign="center center">
     <h1 style="font-size: 400%; padding: 40px ">About us</h1>
     <p style="font-size: 20px; padding-left:10px; padding-right:10px">ViitorStudent reprezintă un ajutor pentru toți cei aflați în căutarea facultății potrivite. Centralizarea datelor referitoare la procedurile de admitere ale celor mai prestigioase facultăți din țară, un mecansim automat de selectare a facultății pe baza pasiunilor și înclinațiilor utilizatorului, dar și posibilitatea de a discuta cu studenți ai respectivei facultăți, toate aflate la un click distanță. </p>
     <div id="inner-div">
@@ -24,5 +27,6 @@
             </div>
         </div>
     </div>
+  </div>
   </div>
 
