--- a/client/src/app/components/university-big-card/university-big-card.component.html
+++ b/client/src/app/components/university-big-card/university-big-card.component.html
@@ -13,7 +13,43 @@
             <mat-tab-group mat-align-tabs="center">
                 <mat-tab label="Descriere"><p style="text-indent: 7%;"  style="padding: 2%;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque iaculis elementum erat vel porttitor. Nullam eleifend metus in arcu interdum sagittis. Aliquam consequat nulla a tincidunt tincidunt. Donec lectus ante, rutrum nec porta et, euismod eget metus. Ut mollis varius arcu, at mattis magna hendrerit vel. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Proin placerat a massa id luctus. Nullam ac aliquam erat. Etiam vel nisi venenatis, consectetur nulla eu, venenatis ex. Nam id justo pellentesque, volutpat lorem et, auctor arcu. Curabitur porta, diam non elementum faucibus, enim dolor hendrerit leo, ac porta urna enim et risus. Phasellus ultricies vulputate ante, vel sollicitudin massa cursus malesuada. Ut vitae felis at neque pulvinar blandit ac a elit. Vivamus laoreet congue eros, vitae hendrerit magna pellentesque eu. Integer fermentum libero nec fermentum eleifend. Sed eget viverra mi. Suspendisse cursus elit sed dui varius laoreet. Curabitur hendrerit tortor neque, nec elementum nisl interdum efficitur. Etiam sollicitudin, nisl vel suscipit tincidunt, sapien massa imperdiet turpis, nec pretium nibh velit fringilla nunc. Vestibulum eleifend in quam vestibulum tincidunt. Curabitur blandit tellus tincidunt, consectetur sem id, porta lacus. Sed sit amet aliquet est. Nulla facilisi. Duis vulputate massa augue, non maximus justo luctus ut. Nam dapibus posuere lorem, at egestas massa sodales id. Maecenas efficitur faucibus est eu porta. Praesent imperdiet eros nulla, tincidunt ultricies sem sollicitudin id.</p></mat-tab>
                 <mat-tab label="Proceduri de inscriere"><p style="text-indent: 7%;"  style="padding: 2%;">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque iaculis elementum erat vel porttitor. Nullam eleifend metus in arcu interdum sagittis. Aliquam consequat nulla a tincidunt tincidunt. Donec lectus ante, rutrum nec porta et, euismod eget metus. Ut mollis varius arcu, at mattis magna hendrerit vel. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Proin placerat a massa id luctus.</p></mat-tab>
-                <mat-tab label="Comentarii"> <span *ngFor="let comment of comments"><app-comment [comment]=comment></app-comment></span></mat-tab>
+                <mat-tab label="Comentarii"> 
+                     
+                    
+                    <div width="100%" height="10%" fxLayout="row" fxLayoutAlign="start start" style=" padding-top: 2%; padding-left: 2%">
+                        <div fxLayout="column" fxLayoutAlign="center center" style="padding-right: 30px">
+                            <div>
+                                <form class="example-form">
+                                    <mat-form-field class="example-full-width" appearance="fill">
+                                        <mat-label>Titlul comentariului nou</mat-label>
+                                    <input [(ngModel)]="newComment.title" [ngModelOptions]="{standalone: true}" matInput #message maxlength="50" placeholder="">
+                                    <mat-hint align="end">{{message.value.length}} / 50</mat-hint>
+                                    </mat-form-field>
+                                </form>
+                            </div>
+                            <div>
+                                <app-favorite [toggleable]="true" (change)="getReview($event)"></app-favorite>
+                            </div>
+                            <div style="padding-top: 5%">
+                                <button mat-flat-button (click)="onSubmit()">Submit</button>
+                            </div>
+                        </div>
+                        <div style="padding-right: 30px">
+                            <form class="example-form">
+                                <mat-form-field class="example-full-width" appearance="fill" style="width: 45vw;">
+                                <mat-label>Continutul comentariului nou</mat-label>
+                                <textarea [(ngModel)]="newComment.content" [ngModelOptions]="{standalone: true}" matInput cdkTextareaAutosize cdkAutosizeMinRows="7"></textarea>
+                                </mat-form-field>
+                            </form>
+                        </div>
+                    </div>
+                    <hr>
+                    <div style="height:25vh; overflow-y:scroll;">
+                        <div *ngFor="let comment of comments" >
+                            <app-comment [comment]=comment></app-comment>
+                        </div>
+                    </div>
+                </mat-tab>
             </mat-tab-group>
             <div fxLayout="row wrap" fxLayoutAlign="space-around center">
                 <div fxLayout="row" fxLayoutAlign="center center"><mat-icon>alternate_email</mat-icon><span class="aligned-with-icon">{{data.email}}</span></div>
