--- a/client/src/app/components/user-page/user-page.component.html
+++ b/client/src/app/components/user-page/user-page.component.html
@@ -1,6 +1,6 @@
-<div class="userPage"  fxLayout="column" fxLayoutAlign="start center" >
+<div class="userPage">
     <mat-card class="userCard">
-        <div fxLayout="row" fxLayoutAlign="center center" class="innerCard"> 
+        <div fxLayout.gt-sm="row" fxLayout.lt-sm="column" fxLayoutAlign="center center" class="innerCard"> 
             <div class="imageBox">
                 <img src="/assets/white_logo.png" class="image">
             </div>
