--- a/client/src/app/components/navbar/navbar.component.html
+++ b/client/src/app/components/navbar/navbar.component.html
@@ -1,14 +1,14 @@
 <mat-toolbar fxLayout="row"  fxLayoutAlign="space-between center">
-  <button mat-button (click)="openAboutUs()" >About us</button>
+  <button mat-button (click)="openAboutUs()" >Despre noi</button>
   <button *ngIf="currentUser != null; else login" mat-button [matMenuTriggerFor]="userMenu">
-    Hello, {{ currentUser?.firstName }} {{ currentUser?.lastName }}
+    Salut, {{ currentUser?.firstName }} {{ currentUser?.lastName }}
     <mat-icon>arrow_drop_down</mat-icon>
   </button>
   <ng-template #login>
-    <button mat-button (click)="openLogin()">Login</button>
+    <button mat-button (click)="openLogin()">Logare</button>
   </ng-template>
   <mat-menu #userMenu="matMenu">
-    <button  mat-menu-item>Profile</button>
+    <button  mat-menu-item>Profil</button>
     <button mat-menu-item (click)="logout()" class="mat-warn mat-toolbar">Logout</button>
   </mat-menu>
 </mat-toolbar>
