--- a/client/src/app/components/universities/universities.component.html
+++ b/client/src/app/components/universities/universities.component.html
@@ -1,5 +1,133 @@
-<div fxLayout.gt-xs="row wrap" fxLayout.xs="column" fxLayoutAlign="space-around center" fxLayoutGap="25px">
-    <university-card style="padding: 30px;" *ngFor="let university of arr"name="{{university.name}}" group="{{university.group}}" shortDescription="{{university.shortDescription}}"
-email="{{university.email}}" phoneNumber="{{university.phoneNumber}}" address="{{university.address}}" imageUrl="http://localhost:29949/api/images/?universityId={{university.id}}" (click)="showBig(university)">
+
+  <div fxLayout="row" fxLayoutAlign="space-evenly center" style="padding: 50px">
+    <mat-slide-toggle
+      class="example-margin"
+      color="primary"
+      (change)="this.enableForm = !this.enableForm"
+      name="EnableForm"
+    >
+      <span style="color: white">Tine cont de sondaj</span>
+    </mat-slide-toggle>
+    <!-- Toggle -->
+    <mat-slide-toggle
+      class="example-margin"
+      color="primary"
+      [checked]="descendingOrder"
+    >
+      <span style="color: white">Show in descending order</span>
+    </mat-slide-toggle>
+  </div>
+  <div
+    fxLayout.lt-md="column"
+    fxLayout.gt-md="row"
+    fxLayoutAlign="space-around center"
+  >
+    <!-- City -->
+    
+    <mat-form-field
+      class="example-chip-list"
+      appearance="fill"
+      style="width: 100%;padding: 50px;"
+    >
+      <mat-label>Click pentru a alege orase din lista</mat-label>
+      <mat-chip-list #chipListCity aria-label="Select city">
+        <mat-chip
+          *ngFor="let cityid of sortFilter.cities"
+          (removed)="removeCity(cityid)"
+        >
+          {{ getCityName(cityid) }}
+          <button matChipRemove>
+            <mat-icon>cancel</mat-icon>
+          </button>
+        </mat-chip>
+        <input
+          formControlName="cityInput"
+          (focusout)="this.cityControl.setValue('', { emitEvent: true })"
+          placeholder="Poti alege mai multe orase"
+          #cityInput
+          #trigger="matAutocompleteTrigger"
+          [formControl]="cityControl"
+          [matAutocomplete]="autoCity"
+          [matChipInputFor]="chipListCity"
+          [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+          (matChipInputTokenEnd)="addCity($event)"
+        />
+      </mat-chip-list>
+      <mat-autocomplete
+        #autoCity="matAutocomplete"
+        (optionSelected)="selectedCity($event)"
+      >
+        <mat-option *ngFor="let city of cityOptions" [value]="city.id">
+          {{ city.name }}
+        </mat-option>
+      </mat-autocomplete>
+    </mat-form-field>
+
+    <!-- Subject -->
+
+
+    <mat-form-field
+      class="example-chip-list"
+      appearance="fill"
+      style="width: 100%;padding: 50px;"
+    >
+      <mat-label>Click pentru a alege materii din lista</mat-label>
+      <mat-chip-list #chipListSubject aria-label="Select subject">
+        <mat-chip
+          *ngFor="let subjectid of sortFilter.subjects"
+          (removed)="removeSubject(subjectid)"
+        >
+          {{ getSubjectName(subjectid) }}
+          <button matChipRemove>
+            <mat-icon>cancel</mat-icon>
+          </button>
+        </mat-chip>
+        <input
+          formControlName="subjectInput"
+          (focusout)="subjectInput.value = ''"
+          placeholder="Poti alege mai multe materii"
+          #subjectInput
+          #trigger="matAutocompleteTrigger"
+          [formControl]="subjectControl"
+          [matAutocomplete]="autoSubject"
+          [matChipInputFor]="chipListSubject"
+          [matChipInputSeparatorKeyCodes]="separatorKeysCodes"
+          (matChipInputTokenEnd)="addSubject($event)"
+        />
+      </mat-chip-list>
+      <mat-autocomplete
+        #autoSubject="matAutocomplete"
+        (optionSelected)="selectedSubject($event)"
+      >
+        <mat-option *ngFor="let subject of subjectOptions" [value]="subject.id">
+          {{ subject.name }}
+        </mat-option>
+      </mat-autocomplete>
+    </mat-form-field>
+  </div>
+  <div fxLayout="row" fxLayoutAlign="space-evenly center">
+    <button mat-raised-button color="primary" (click)="submitForm()">Submit</button>
+  </div>
+  <div
+    fxLayout.gt-xs="row wrap"
+    fxLayout.xs="column"
+    fxLayoutAlign="space-around center"
+    fxLayoutGap="25px"
+  >
+    <university-card
+      style="padding: 30px"
+      *ngFor="let university of arr"
+      name="{{ university.name }}"
+      group="{{ university.group }}"
+      shortDescription="{{ university.shortDescription }}"
+      email="{{ university.email }}"
+      phoneNumber="{{ university.phoneNumber }}"
+      address="{{ university.address }}"
+      imageUrl="http://localhost:29949/api/images/?universityId={{
+        university.university_id
+      }}"
+      (click)="showBig(university)"
+    >
     </university-card>
-</div>
+  </div>
+
