--- a/client/src/app/components/university-big-card/university-big-card.component.html
+++ b/client/src/app/components/university-big-card/university-big-card.component.html
@@ -1,7 +1,7 @@
 <div style="height: 100%;">
     <mat-card>
         <div class="container">
-            <img mat-card-image src="http://localhost:29949/api/images/?universityId={{extendedUniversity.university_id}}"
+            <img mat-card-image src="http://localhost:29949/api/images/?universityId={{data.university_id}}"
                 style="object-fit: cover; height:300px; opacity:0.3; background-color:black">
             <div class="centered" fxLayout="column" fxFlexAlign="center center">
                 <hr color="white" width="100%">
